# motorPi

./: .gitignore  CMakeLists.txt  Makefile  README.md  motor_test
include/: dualmotorPi.h  motorPi.h
src/: Makefile  dualmotorPi.cpp  motorPi.cpp  motorPi.h
test/: test_dualmotor.cpp
